[gd_scene load_steps=17 format=3 uid="uid://dstu4u4xea1r8"]

[ext_resource type="Shader" uid="uid://ddrpmnosfw8p7" path="res://scenes/entities/baby/baby.tres" id="1_r3wtf"]
[ext_resource type="Script" uid="uid://bsme3d5bjidqq" path="res://scenes/entities/baby/baby.gd" id="1_vecyw"]
[ext_resource type="PackedScene" uid="uid://b7vic2dqnsb2g" path="res://scenes/ui/speech_bubble/speech_bubble.tscn" id="3_31d5v"]
[ext_resource type="FontFile" uid="uid://85203nd61s7c" path="res://resources/Funnel_Sans/static/FunnelSans-ExtraBold.ttf" id="3_akj6c"]
[ext_resource type="Shader" uid="uid://dqxvsnu26xk27" path="res://scenes/entities/baby/baby_energy_bar.tres" id="5_fplr8"]

[sub_resource type="SphereMesh" id="SphereMesh_31d5v"]
radius = 0.1
height = 0.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_akj6c"]
render_priority = 0
shader = ExtResource("1_r3wtf")
shader_parameter/ColorParameter = Color(1, 0.67, 0.67, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_1y16u"]
height = 1.0
radius = 0.12

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vecyw"]
render_priority = 0
shader = ExtResource("1_r3wtf")
shader_parameter/ColorParameter = Color(1, 0.67, 0.67, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_31d5v"]
material = SubResource("ShaderMaterial_vecyw")
radius = 0.15
height = 0.5

[sub_resource type="VisualShaderNodeFloatConstant" id="VisualShaderNodeFloatConstant_akj6c"]
constant = 0.6

[sub_resource type="VisualShaderNodeColorParameter" id="VisualShaderNodeColorParameter_fplr8"]
parameter_name = "BubbleColor"
default_value_enabled = true
default_value = Color(0.1, 0.25, 0.125, 1)

[sub_resource type="VisualShader" id="VisualShader_7b0pr"]
code = "shader_type spatial;
render_mode blend_mix, depth_draw_opaque, cull_back, diffuse_toon, specular_schlick_ggx, unshaded;

uniform vec4 BubbleColor : source_color = vec4(0.100000, 0.250000, 0.125000, 1.000000);



void fragment() {
// ColorParameter:3
	vec4 n_out3p0 = BubbleColor;


// FloatConstant:2
	float n_out2p0 = 0.600000;


// Output:0
	ALBEDO = vec3(n_out3p0.xyz);
	ALPHA = n_out2p0;


}
"
graph_offset = Vector2(-33.4546, -15.3091)
modes/diffuse = 3
flags/unshaded = true
nodes/fragment/0/position = Vector2(600, 120)
nodes/fragment/2/node = SubResource("VisualShaderNodeFloatConstant_akj6c")
nodes/fragment/2/position = Vector2(-20, 360)
nodes/fragment/3/node = SubResource("VisualShaderNodeColorParameter_fplr8")
nodes/fragment/3/position = Vector2(40, 40)
nodes/fragment/connections = PackedInt32Array(2, 0, 0, 1, 3, 0, 0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hyc4r"]
render_priority = 0
shader = SubResource("VisualShader_7b0pr")
shader_parameter/BubbleColor = Color(0.22, 0.1, 0.25, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_akj6c"]
top_radius = 0.05
bottom_radius = 0.05
height = 0.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7b0pr"]
render_priority = 0
shader = ExtResource("5_fplr8")
shader_parameter/EnergyPercentage = 1.0

[node name="Baby" type="Node3D"]
script = ExtResource("1_vecyw")

[node name="HeadMesh" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.334121, 0)
mesh = SubResource("SphereMesh_31d5v")
surface_material_override/0 = SubResource("ShaderMaterial_akj6c")

[node name="Eyes" type="Label3D" parent="HeadMesh"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0458008, 0.0964422)
modulate = Color(0.729412, 0.729412, 0.729412, 1)
text = "><"
font = ExtResource("3_akj6c")
font_size = 20

[node name="FieldOfView" type="Area3D" parent="HeadMesh/Eyes"]
collision_layer = 0
collision_mask = 65536
monitorable = false

[node name="Cone" type="CollisionShape3D" parent="HeadMesh/Eyes/FieldOfView"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0.499546)
shape = SubResource("CylinderShape3D_1y16u")

[node name="Mouth" type="Label3D" parent="HeadMesh"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0157096, 0.0555415)
modulate = Color(0.729412, 0.729412, 0.729412, 1)
text = "~"
font_size = 16

[node name="BodyMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_31d5v")

[node name="SpeechBubble" parent="." instance=ExtResource("3_31d5v")]
unique_name_in_owner = true
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0.974364, 0.855036, 0)
visible = false
speaker_name = "Baby"
example_text = "I goo, therefore, I ga."

[node name="Cube" parent="SpeechBubble/curved_box" index="0"]
surface_material_override/0 = SubResource("ShaderMaterial_hyc4r")

[node name="SpeakerLabel" parent="SpeechBubble" index="1"]
text = "Baby"

[node name="TextLabel" parent="SpeechBubble" index="2"]
text = "I goo, therefore, I ga."

[node name="PressToContinueLabel" parent="SpeechBubble" index="3"]
text = "Press a/x to continue"

[node name="EnergyBar" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.271999, 0.465185, 0)
visible = false
mesh = SubResource("CylinderMesh_akj6c")
surface_material_override/0 = SubResource("ShaderMaterial_7b0pr")

[node name="ZZZLabel" type="Label3D" parent="EnergyBar"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.318285, 0)
modulate = Color(0.560784, 1, 0.568627, 1)
text = "ZZZ"
font = ExtResource("3_akj6c")
font_size = 16

[connection signal="body_entered" from="HeadMesh/Eyes/FieldOfView" to="." method="_on_field_of_view_body_entered"]
[connection signal="body_exited" from="HeadMesh/Eyes/FieldOfView" to="." method="_on_field_of_view_body_exited"]

[editable path="SpeechBubble"]
[editable path="SpeechBubble/curved_box"]
